force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/tc9_et__T2Pext_mainSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>The main custom setting used to configure 2cloudnine Time2Pay Extension Package</description>
    <label>Time2Pay Ext Main Settings</label>
</CustomObject>