force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Custom_Notification_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Custom_Notification_ID__c</fullName>
    <defaultValue>&quot;000000000000000AAA&quot;</defaultValue>
    <description>This field refers to the dummy Id provided for custom notifications</description>
    <inlineHelpText>This field refers to the dummy Id provided for custom notifications</inlineHelpText>
    <label>Custom Notification ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>