force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Default_Template_Groups_MPR__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Default_Template_Groups_MPR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defaults the Assignment Rate Template Group and Payee Timesheet Allowance Template Group based on the Interpretation Rule Name</description>
    <inlineHelpText>Defaults the Assignment Rate Template Group and Payee Timesheet Allowance Template Group based on the Interpretation Rule Name</inlineHelpText>
    <label>Default Template Groups MPR</label>
    <type>Checkbox</type>
</CustomField>