force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Default_Transaction_Filters_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Default_Transaction_Filters_Invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines which type of Invoice Filters will be selected by default when the Process Invoice page is first opened. If set to False, the page will open with Standard Invoice Filters selected. If True, the page will open with Transaction filters selected.</description>
    <inlineHelpText>Defines which type of Invoice Filters will be selected by default when the Process Invoice page is first opened. If set to False, the page will open with Standard Invoice Filters selected. If True, the page will open with Transaction filters selected.</inlineHelpText>
    <label>Default Transaction Filters Invoicing</label>
    <type>Checkbox</type>
</CustomField>