force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Display_Break2__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Display_Break2__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defines if a second set of &apos;Break&apos; fields are active for use on Timesheets via the Timesheet Manager, Employee Portal and Approver Pages. When FALSE, there will only be one set of Break fields available on Timesheets.</description>
    <inlineHelpText>Defines if a second set of &apos;Break&apos; fields are active for use on Timesheets via the Timesheet Manager, Employee Portal and Approver Pages. When FALSE, there will only be one set of Break fields available on Timesheets.</inlineHelpText>
    <label>Display Break 2</label>
    <type>Checkbox</type>
</CustomField>