force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Enable_Custom_Invoice_Type_Picklist__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_Custom_Invoice_Type_Picklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the custom Invoice Type values defined in the “Process Invoice - Invoice Types” custom setting will be used for the Invoice Type picklist on the Process Invoice visualforce page. When FALSE, the standard package picklist will be used.</description>
    <inlineHelpText>Defines if the custom Invoice Type values defined in the “Process Invoice - Invoice Types” custom setting will be used for the Invoice Type picklist on the Process Invoice visualforce page. When FALSE, the standard package picklist will be used.</inlineHelpText>
    <label>Enable Custom Invoice Type Picklist</label>
    <type>Checkbox</type>
</CustomField>