force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Enable_Project_Codes__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_Project_Codes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if Project Codes are used within the Org. If True, Project Code fields will be available in the Timesheet Manager, Expense Claim Manager, Employee Portal, Approver Pages and Invoices</description>
    <inlineHelpText>Defines if Project Codes are used within the Org. If True, Project Code fields will be available in the Timesheet Manager, Expense Claim Manager, Employee Portal, Approver Pages and Invoices</inlineHelpText>
    <label>Enable Project Codes</label>
    <type>Checkbox</type>
</CustomField>