force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Enforce_Credit_Note_Reason__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enforce_Credit_Note_Reason__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defines if Users will be forced to select a credit note reason before they can create a Credit Note. If TRUE, the User will be required to select a reason.</description>
    <inlineHelpText>Defines if Users will be forced to select a credit note reason before they can create a Credit Note. If TRUE, the User will be required to select a reason.</inlineHelpText>
    <label>Enforce Credit Note Reason</label>
    <type>Checkbox</type>
</CustomField>