force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Generate_Transaction_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Generate_Transaction_Start_Date__c</fullName>
    <description>Defines the earliest Timesheet Entry Date that will be picked up in the Scheduled Job to Process Timesheets and Create Transactions. Timesheets with Entry Dates prior to this date must be processed manually via the Process Transactions button within the Timesheet Manager.
This field is mainly used to prevent historical Timesheets created in Data Migration from been picked up for processing.</description>
    <inlineHelpText>Defines the earliest Timesheet Entry Date that will be picked up by the Scheduled Job to Process Timesheets and Create Transactions. Timesheets with Entry Dates prior to this date must be processed manually via the Timesheet Manager.</inlineHelpText>
    <label>Generate Transaction Start Date</label>
    <type>Date</type>
</CustomField>