force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Hide_Timesheet_Manager_Add_Transaction__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Hide_Timesheet_Manager_Add_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the &quot;Add&quot; Transaction button in the Timesheet Manager is available for use. If True it will be hidden. When hidden, specific Users can be given access to the button via the &apos;Enable Timesheet Manager Add Transaction&apos; field on the User object.</description>
    <inlineHelpText>Defines if the &quot;Add&quot; Transaction button in the Timesheet Manager is available for use. If True it will be hidden. When hidden, specific Users can be given access to the button via the &apos;Enable Timesheet Manager Add Transaction&apos; field on the User object.</inlineHelpText>
    <label>Hide Timesheet Manager Add Transaction</label>
    <type>Checkbox</type>
</CustomField>