force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Hide_Timesheet_Manager_Approve__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Hide_Timesheet_Manager_Approve__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the &quot;Approve&quot; buttons in the Timesheet Manager are available for use. If True, they will be hidden. When hidden, specific Users can be given access to use the buttons via the &apos;Enable Timesheet Manager Approve&apos; field on the User object.</description>
    <inlineHelpText>Defines if the &quot;Approve&quot; buttons in the Timesheet Manager are available for use. If True, they will be hidden. When hidden, specific Users can be given access to use the buttons via the &apos;Enable Timesheet Manager Approve&apos; field on the User object.</inlineHelpText>
    <label>Hide Timesheet Manager Approve</label>
    <type>Checkbox</type>
</CustomField>