force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Hide_Timesheet_Manager_Reject__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Hide_Timesheet_Manager_Reject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the &quot;Reject&quot; buttons in the Timesheet Manager are available for use. If True, they will be hidden. When hidden, specific Users can be given access to use the button via the &apos;Enable Timesheet Manager Reject&quot; field on the User object.</description>
    <inlineHelpText>Defines if the &quot;Reject&quot; buttons in the Timesheet Manager are available for use. If True, they will be hidden. When hidden, specific Users can be given access to use the button via the &apos;Enable Timesheet Manager Reject&quot; field on the User object.</inlineHelpText>
    <label>Hide Timesheet Manager Reject</label>
    <type>Checkbox</type>
</CustomField>