force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Hide_Timesheet_Manager_Revert__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Hide_Timesheet_Manager_Revert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the &quot;Revert To New&quot; button in the Timesheet Manager is available for use. If True, it will be hidden. When hidden, specific Users can be given access to use the button via the &apos;Enable Timesheet Manager Revert&apos; field on the User object.</description>
    <inlineHelpText>Defines if the &quot;Revert To New&quot; button in the Timesheet Manager is available for use. If True, it will be hidden. When hidden, specific Users can be given access to use the button via the &apos;Enable Timesheet Manager Revert&apos; field on the User object.</inlineHelpText>
    <label>Hide Timesheet Manager Revert</label>
    <type>Checkbox</type>
</CustomField>