force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Include_Expense__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Include_Expense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if Expenses can be added via Timesheet Manager. When TRUE, Users can create Expenses and apply them to a Timesheet via the Timesheet Manager.</description>
    <inlineHelpText>Defines if Expenses can be added via Timesheet Manager. When TRUE, Users can create Expenses and apply them to a Timesheet via the Timesheet Manager.</inlineHelpText>
    <label>Include Timesheet Manager Expenses</label>
    <type>Checkbox</type>
</CustomField>