force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Include_Timesheet_Manager_Allowances__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Include_Timesheet_Manager_Allowances__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defines if Allowances can be added via Timesheet Manager. When TRUE, Users can create Allowances and apply them to a Timesheet via the Timesheet Manager.</description>
    <inlineHelpText>Defines if Allowances can be added via Timesheet Manager. When TRUE, Users can create Allowances and apply them to a Timesheet via the Timesheet Manager.</inlineHelpText>
    <label>Include Timesheet Manager Allowances</label>
    <type>Checkbox</type>
</CustomField>