force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Prevent_Future_Invoices__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Prevent_Future_Invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if Non-System Admin Users are allowed to create Invoices with an Invoice Date later than the current date. If True, Non-System Admin Users can not create Invoices for future dates. System Admin will be allowed to create Invoices for all dates</description>
    <inlineHelpText>Defines if Non-System Admin Users are allowed to create Invoices with an Invoice Date later than the current date. If True, Non-System Admin Users can not create Invoices for future dates. System Admin will be allowed to create Invoices for all dates</inlineHelpText>
    <label>Prevent Future Invoices</label>
    <type>Checkbox</type>
</CustomField>