force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Record_Owner__c</fullName>
    <label>Record Owner</label>
    <length>15</length>
    <type>Text</type>
</CustomField>