force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Record_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Record_OwnerId__c</fullName>
    <label>Record Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>