force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Send_Email_To_Approver__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Send_Email_To_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if email notifications will be sent to Timesheet / Expense Claim Approvers. It works in conjunction with the 2 sets of Approval Email - New Token and Approval Email - Submit fields. If FALSE, all these fields are overridden and no emails are sent.</description>
    <inlineHelpText>Defines if email notifications will be sent to Timesheet / Expense Claim Approvers. It works in conjunction with the 2 sets of Approval Email - New Token and Approval Email - Submit fields. If FALSE, all these fields are overridden and no emails are sent.</inlineHelpText>
    <label>Send Email To Approver</label>
    <type>Checkbox</type>
</CustomField>