force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Send_Invoice_Emails_From_Email__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Send_Invoice_Emails_From_Email__c</fullName>
    <description>When the Account&apos;s Send Invoice Emails Setting defines the email source as &apos;Global Email&apos; the email address defined in this field will be used as the from / reply to email when emailing Invoices. The email entered must be an Organization-Wide Address.</description>
    <inlineHelpText>When the Account&apos;s Send Invoice Emails Setting defines the email source as &apos;Global Email&apos; the email address defined in this field will be used as the from / reply to email when emailing Invoices. The email entered must be an Organization-Wide Address.</inlineHelpText>
    <label>Send Invoice Emails From Email</label>
    <type>Email</type>
</CustomField>