force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Transaction_Failure_Email_CC__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Transaction_Failure_Email_CC__c</fullName>
    <description>Stored email address, in addition to the running User, will receive notifications of transaction failures</description>
    <inlineHelpText>Stored email address, in addition to the running User, will receive notifications of transaction failures</inlineHelpText>
    <label>Batch Failure Send Additional Email</label>
    <type>Email</type>
</CustomField>