force-app/main/default/objects/tc9_et__T2Pext_mainSettings__c/fields/tc9_et__Validated_Transaction_Total_in_TSM__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Validated_Transaction_Total_in_TSM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if validation will occur within the Timesheet Manager to ensure the sum of the Quantity of Transactions with a Record Type of Timesheet Entry matches the Timesheets Total Hours. This is to prevent additional hours being added via Pay Transactions without a corresponding Timesheet Entry. When True, the validation will occur.</description>
    <inlineHelpText>Defines if validation will occur within the Timesheet Manager to ensure the sum of the Quantity of Transactions with a Record Type of Timesheet Entry matches the Timesheets Total Hours. When True, the validation will occur.</inlineHelpText>
    <label>Validated Transaction Total in TSM</label>
    <type>Checkbox</type>
</CustomField>